--- a/static/styles/content/search.scss
+++ b/static/styles/content/search.scss
@@ -12,3 +12,11 @@
 .search-wrapper {
     margin-bottom: 1em;
 }
+
+.search-parameters {
+    margin-bottom: 2em;
+}
+
+.filters-attributes {
+    background: #e9e9e9;
+}
