--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -49,12 +49,19 @@
                 <div class="row">
                     {{#each directories}}
                         <div class="col-sm-6 col-xs-12 col-md-4">
-                            <a class="card card-block folder" href="{{this.url}}">
-                                <strong class="card-title-directory">
+                            <div class="card card-block folder">
+                                <a href="{{this.url}}" class="card-title-directory">
                                     <i class="fa fa-folder" aria-hidden="true"></i> {{this.name}}
-                                </strong>
-                            </a>
-                        </div>
+                                </a>
+								<a href="/files/directory/"
+								   target="_blank"
+								   data-method="delete"
+								   data-file-name="{{this.name}}"
+								   data-file-path="{{this.path}}">
+									<i class="fa fa-trash-o pull-right"></i>
+								</a>
+                            </div>
+						</div>
                     {{/each}}
 
                     {{#if canCreateDir}}
