Include error partial on login page, loggedIn layout

--- a/views/authentication/login.hbs
+++ b/views/authentication/login.hbs
@@ -18,6 +18,7 @@
 
                     <div class="form-wrapper">
                         {{> "lib/components/notification"}}
+						{{> "lib/partials/error-alert" }}
 
                         <form method="post" action="/login/" class="login-form">
                             <div class="form-group">
