--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -39,6 +39,7 @@
         </aside>
 
         <section class="content-wrapper">
+			{{> "lib/partials/error-alert" }}
             <nav class="topbar navbar">
 
                 {{#if breadcrumb}}
