Make the 💯whole💯 directory 👉clickable👈 🤗🙌

--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -113,6 +113,10 @@
         .create-directory {
             background-color: $colorGrey;
         }
+
+        .card-title-directory {
+            color: $colorHPIRed;
+        }
     }
 
     .files {
