--- a/views/courses/add-tool.hbs
+++ b/views/courses/add-tool.hbs
@@ -6,10 +6,9 @@
 
     {{#content "page"}}
         <section class="section-course">
-            <form action="{{action}}" method="post">
                 <div class="list-group">
-                    {{#if ltiTool}}
-                        {{#each ltiTool}}
+                    {{#if ltiTools}}
+                        {{#each ltiTools}}
                             <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
                             {{#if logo_url}}
                                 <img src={{this.logo_url}} class="float-left" style="width:100px; height:auto;"/>
@@ -26,12 +25,15 @@
                     {{/if}}
                 </div>
 
-
-                <div class="form-group">
-                    <input type="submit" class="btn btn-primary" value="{{submitLabel}}" />
-                </div>
-
-            </form>
+            {{#embed "lib/components/modal-form" method="post" class="edit-modal"}}
+                {{#content "fields"}}
+                    {{> "courses/forms/form-classes"}}
+                {{/content}}
+            {{/embed}}
         </section>
+    {{/content}}
+
+    {{#content "scripts" mode="append"}}
+        <script src="/scripts/tools.js" type="text/javascript"></script>
     {{/content}}
 {{/extend}}
