--- a/views/courses/add-tool.hbs
+++ b/views/courses/add-tool.hbs
@@ -9,7 +9,7 @@
                 <div class="list-group">
                     {{#if ltiTools}}
                         {{#each ltiTools}}
-                            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+                            <a class="list-group-item list-group-item-action flex-column align-items-start template_tool" href="{{this._id}}">
                             {{#if logo_url}}
                                 <img src={{this.logo_url}} class="float-left" style="width:100px; height:auto;"/>
                             {{else}}
@@ -27,7 +27,7 @@
 
             {{#embed "lib/components/modal-form" method="post" class="edit-modal"}}
                 {{#content "fields"}}
-                    {{> "courses/forms/form-classes"}}
+                    {{> "courses/forms/form-tools"}}
                 {{/content}}
             {{/embed}}
         </section>
