add course selection

--- a/views/courses/forms/form-tools.hbs
+++ b/views/courses/forms/form-tools.hbs
@@ -1,7 +1,6 @@
 <label>
     Kurs:
-    <select class="form-control" name="courseId"required="required">
-        <!-- todo -->
+    <select class="course-selection" name="courseId" required="required">
     </select>
 </label> <br></br>
 <label>
