Show file errors

--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -39,6 +39,7 @@
         </aside>
 
         <section class="content-wrapper">
+			{{> "lib/components/notification"}}
             <nav class="topbar navbar">
 
                 {{#if breadcrumb}}
