--- a/views/courses/forms/form-tools.hbs
+++ b/views/courses/forms/form-tools.hbs
@@ -1,5 +1,5 @@
 <label>
-    Kurs:
+    Kurs (Pflichtfeld):
     <select class="course-selection" name="courseId" required="required">
     </select>
 </label> <br></br>
@@ -20,6 +20,22 @@
         <option value="public">Öffentlich</option>
     </select>
 </label> <br></br>
-<div className="custom-fields">
-   <!-- todo -->
+<div>
+    Sonstige Einstellungen:
+    <div class="custom-fields">
+    </div>
+    <div class="new-custom-field">
+        <input class="new-custom-field-key" type="text" placeholder="Key">
+        <input  class="new-custom-field-value" type="text" placeholder="Value" >
+        <i class="fa fa-plus" ></i>
+    </div>
+</div>
+<!-- hidden fields -->
+<div style="display: none">
+    <input type="text" name="key" value="{{key}}" />
+    <input type="text" name="lti_message_type" value="{{lti_message_type}}" />
+    <input type="text" name="lti_version" value="{{lti_version}}" />
+    <input type="text" name="resource_link_id" value="{{resource_link_id}}" />
+    <input type="text" name="url" value="{{url}}" />
+    <input type="text" name="secret" value="{{secret}}" />
 </div>
