dynamic custom fields

--- a/views/courses/forms/form-tools.hbs
+++ b/views/courses/forms/form-tools.hbs
@@ -27,7 +27,7 @@
     <div class="new-custom-field">
         <input class="new-custom-field-key" type="text" placeholder="Key">
         <input  class="new-custom-field-value" type="text" placeholder="Value" >
-        <i class="fa fa-plus" ></i>
+        <i class="fa fa-plus new-custom-field-add" ></i>
     </div>
 </div>
 <!-- hidden fields -->
