--- a/views/courses/add-tool.hbs
+++ b/views/courses/add-tool.hbs
@@ -2,6 +2,7 @@
 
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/courses/course.css"/>
+        <link rel="stylesheet" href="/styles/tools/tools.css"/>
     {{/content}}
 
     {{#content "page"}}
