--- a/views/courses/forms/form-tools.hbs
+++ b/views/courses/forms/form-tools.hbs
@@ -1,32 +1,32 @@
-<label>
-    Kurs (Pflichtfeld):
-    <select class="course-selection" name="courseId" required="required">
+<div class="form-group">
+    <label for="courseId">Kurs (Pflichtfeld):</label>
+    <select class="course-selection form-control" name="courseId" required="required">
     </select>
-</label> <br></br>
-<label>
-    Name (Pflichtfeld):
-    <input type="text" name="name" required="required" value="{{name}}" />
-</label> <br></br>
-<label>
-    Logo (URL):
-    <input type="text" name="logo_url" value="{{logo_url}}" />
-</label> <br></br>
-<label>
-    Privatsphäre:
-    <select class="form-control" required="required" value="{{privacy_permission}}">
+</div>
+<div class="form-group">
+    <label for="name">Name (Pflichtfeld):</label>
+    <input  class="form-control" type="text" name="name" required="required" value="{{name}}" />
+</div>
+<div class="form-group">
+    <label for="logo_url">Logo (URL):</label>
+    <input class="form-control" type="text" name="logo_url" value="{{logo_url}}" />
+</div>
+<div class="form-group">
+    <label for="privacy_permission">Privatsphäre:</label>
+    <select class="form-control" required="required" name="privacy_permission" value="{{privacy_permission}}">
         <option value="anonymous">Anonym</option>
         <option value="e-mail">Nur E-Mail</option>
         <option value="name">Nur Name</option>
         <option value="public">Öffentlich</option>
     </select>
-</label> <br></br>
-<div>
-    Sonstige Einstellungen:
+</div>
+<div class="form-group">
+    <label>Sonstige Einstellungen:</label>
     <div class="custom-fields">
     </div>
     <div class="new-custom-field">
         <input class="new-custom-field-key" type="text" placeholder="Key">
-        <input  class="new-custom-field-value" type="text" placeholder="Value" >
+        <input class="new-custom-field-value" type="text" placeholder="Value" >
         <i class="fa fa-plus new-custom-field-add" ></i>
     </div>
 </div>
