change input type to hidden

--- a/views/courses/forms/form-tools.hbs
+++ b/views/courses/forms/form-tools.hbs
@@ -31,11 +31,9 @@
     </div>
 </div>
 <!-- hidden fields -->
-<div style="display: none">
-    <input type="text" name="key" value="{{key}}" />
-    <input type="text" name="lti_message_type" value="{{lti_message_type}}" />
-    <input type="text" name="lti_version" value="{{lti_version}}" />
-    <input type="text" name="resource_link_id" value="{{resource_link_id}}" />
-    <input type="text" name="url" value="{{url}}" />
-    <input type="text" name="secret" value="{{secret}}" />
-</div>
+<input type="hidden" name="key" value="{{key}}" />
+<input type="hidden" name="lti_message_type" value="{{lti_message_type}}" />
+<input type="hidden" name="lti_version" value="{{lti_version}}" />
+<input type="hidden" name="resource_link_id" value="{{resource_link_id}}" />
+<input type="hidden" name="url" value="{{url}}" />
+<input type="hidden" name="secret" value="{{secret}}" />
