--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -56,7 +56,7 @@
                         <div class="btn-group">
                             <button type="button" class="btn btn-secondary dropdown-toggle account-toggle"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <strong>{{ currentUser.displayName }}</strong>
+                                <strong>{{ currentUser.displayName }} ({{ currentRole }})</strong>
                             </button>
                             <div class="dropdown-menu dropdown-menu-right">
                                 <a class="dropdown-item" href="/account/">Einstellungen</a>
