--- a/views/lib/components/notification.hbs
+++ b/views/lib/components/notification.hbs
@@ -1,5 +1,5 @@
 <div class="notification alert alert-dismissible {{#if notification}}alert-{{notification.type}}{{else}}hidden{{/if}}" role="alert">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <button type="button" class="close" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
     <div class="notification-content">{{notification.message}}</div>
