--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -56,6 +56,34 @@ label {
 	}
 }
 
+footer {
+	width: 100%;
+	margin-top: 40px;
+	position: inherit;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	clear: both;
+	padding: 30px 0px;
+
+	@include media-breakpoint-down(xs) {
+		background: $colorBeige;
+
+		img {
+			clear: both;
+			display: block;
+			margin: 0 auto 10px;
+		}
+	}
+
+	.imprint {
+		.center {
+			text-align: center;
+			align-items: center;
+		}
+	}
+}
+
 @-webkit-keyframes fa-spin {
 	0% {
 		-webkit-transform: rotate(0deg);
