--- a/static/styles/lib/error.scss
+++ b/static/styles/lib/error.scss
@@ -2,7 +2,7 @@
 
 .error-page {
 	background: $colorBeige;
-	position: absolute;
+	position: fixed;
 	width: 100%;
 	height: 100%;
 
@@ -38,9 +38,9 @@
 		height: 600px;
 
 		&.bg-graphic-right {
-			right: 5%;
-			top: 5%;
-			background-image: url(../../../static/images/login-right.png);
+			right: 10%;
+			bottom: 10%;
+			background-image: url(../../../images/login-right.png);
 		}
 	}
 
