--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -153,6 +153,11 @@ aside.nav-sidebar {
     }
 }
 
+header {
+    width:100%;
+    float:left;
+}
+
 .content-wrapper {
     width: 100%;
     float: left;
@@ -183,27 +188,6 @@ aside.nav-sidebar {
             margin: 0px 0px 30px 0px;
         }
 
-    }
-}
-
-footer {
-    width: 100%;
-    margin-top: 40px;
-    position: inherit;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    clear: both;
-    padding: 30px 0px;
-
-    @include media-breakpoint-down(xs) {
-        background: $colorBeige;
-
-        img {
-            clear: both;
-            display: block;
-            margin: 0 auto 10px;
-        }
     }
 }
 
