--- a/views/authentication/login.hbs
+++ b/views/authentication/login.hbs
@@ -9,6 +9,7 @@
     {{/content}}
 
     {{#content "body"}}
+        {{#embed "lib/header"}}{{/embed}}
         <div class="container">
             <div class="row">
                 <div class="col-md-6 offset-md-3">
