--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -17,6 +17,8 @@
 <body>
     {{#block "body"}}{{/block}}
 
+    {{#embed "lib/footer"}}{{/embed}}
+
     {{#block "scripts"}}
         <script src="/scripts/jquery/jquery.min.js" type="text/javascript"></script>
         <script src="/scripts/jquery/jquery.serialize-object.js" type="text/javascript"></script>
