--- a/views/lib/error.hbs
+++ b/views/lib/error.hbs
@@ -1,9 +1,11 @@
 {{#extend "lib/default"}}
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/lib/error.css" />
+        <link rel="stylesheet" href="/styles/authentication/login.css"/>
     {{/content}}
 
     {{#content "body"}}
+        {{#embed "lib/header"}}{{/embed}}
         <div class="error-page">
             <section class="details">
                 <div class="error-code">
