--- a/static/styles/lib/error.scss
+++ b/static/styles/lib/error.scss
@@ -1,71 +1,76 @@
 @import './colors';
 
 .error-page {
-	background: $colorBeige;
-	position: fixed;
+  background: $colorBeige;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+
+  h3 {
+	color: $colorHPIRed;
+	float: left;
 	width: 100%;
-	height: 100%;
+	text-align: center;
+	font-weight: bold;
+	margin: 100px 0px;
+  }
 
-	h3 {
-		color: $colorHPIRed;
-		float: left;
-		width: 100%;
-		text-align: center;
-		font-weight: bold;
-		margin: 100px 0px;
+  .btn {
+	float: right;
+  }
+
+  .form-group {
+	z-index: 10;
+	position: relative;
+  }
+
+  select, input {
+	margin-bottom: 10px;
+	border: 1px solid rgba(0, 0, 0, 0.15);
+  }
+
+  .bg-graphic {
+	position: absolute;
+	background: no-repeat center center;
+	background-size: contain;
+	z-index: 0;
+	width: 600px;
+	height: 600px;
+
+	&.bg-graphic-right {
+	  right: 10%;
+	  bottom: 10%;
+	  background-image: url(/images/login-right.png);
+	}
+  }
+
+  .details {
+	position: absolute;
+	margin-left: 70px;
+	margin-top: 100px;
+	z-index: 10;
+
+	.error-code {
+	  font-size: 800%;
+	  font-weight: bold;
 	}
 
-	.btn {
-		float: right;
+	.error-title {
+	  font-weight: bold;
+	  font-size: 500%;
+	  text-transform: uppercase;
+	  margin-bottom: 1em;
 	}
 
-	.form-group {
-		z-index: 10;
-		position: relative;
+	.error-card {
+	  max-width: 80%;
 	}
 
-	select, input {
-		margin-bottom: 10px;
-		border: 1px solid rgba(0, 0, 0, 0.15);
+	.error-description {
+	  overflow: auto;
+	  max-height: 70vh;
 	}
 
-	.bg-graphic {
-		position: absolute;
-		background: no-repeat center center;
-		background-size: contain;
-		z-index: 0;
-		width: 600px;
-		height: 600px;
-
-		&.bg-graphic-right {
-			right: 10%;
-			bottom: 10%;
-			background-image: url(../../../images/login-right.png);
-		}
-	}
-
-	.details {
-		position: absolute;
-		margin-left: 70px;
-		margin-top: 100px;
-		z-index: 10;
-
-		.error-code {
-			font-size: 800%;
-			font-weight: bold;
-		}
-
-		.error-title {
-			font-weight: bold;
-			font-size: 500%;
-			text-transform: uppercase;
-		}
-
-		.error-description {
-			margin-top: 50px;
-			font-size: 200%;
-			max-width: 500px;
-		}
-	}
+  }
 
 }
