Adapt title to viewport width

--- a/static/styles/lib/error.scss
+++ b/static/styles/lib/error.scss
@@ -57,7 +57,7 @@
 
 	.error-title {
 	  font-weight: bold;
-	  font-size: 500%;
+	  font-size: 5vw;
 	  text-transform: uppercase;
 	  margin-bottom: 1em;
 	}
