hideSearch if content

--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -78,6 +78,7 @@
                                 {{subtitle}}
                             </div>
                         </div>
+                        {{#unless hideSearch}}
                         <div class="col-sm-3">
                             <form class="search-wrapper" action="/content/" method="get">
                                 <a class="mobile-search-toggle">
@@ -93,6 +94,7 @@
                                 </div>
                             </form>
                         </div>
+                        {{/unless}}
                     </div>
                 </div>
             </section>
