--- a/views/content/search.hbs
+++ b/views/content/search.hbs
@@ -1,4 +1,4 @@
-{{#extend "lib/loggedin"}}
+{{#extend "lib/loggedin" hideSearch="true"}}
 
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/content/search.css"/>
