--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{{title}} - Schul-Cloud</title>
+    <title>{{#if title}}{{title}} - {{/if}}Schul-Cloud</title>
 
     {{#block "meta"}}
         <meta name="viewport" content="width=device-width, initial-scale=1">
