Bring back header

--- a/static/styles/lib/error.scss
+++ b/static/styles/lib/error.scss
@@ -1,7 +1,9 @@
 @import './colors';
 
-.error-page {
+body {
   background: $colorBeige;
+}
+.error-page {
   position: absolute;
   width: 100%;
   height: 100%;
