--- a/views/lib/error.hbs
+++ b/views/lib/error.hbs
@@ -4,6 +4,7 @@
 	{{/content}}
 
 	{{#content "body"}}
+		{{#embed "lib/header"}}{{/embed}}
 		<div class="error-page">
 			<section class="details">
 				<div class="error-code">
