--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -173,6 +173,10 @@ header {
         padding-right: 0px;
     }
 
+    .school-data {
+        padding-top: 10px;
+    }
+
     .section-default {
         width: 100%;
         float: left;
