show federal state logo

--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -174,7 +174,12 @@ header {
     }
 
     .school-data {
+        padding-top: 11px;
+    }
+    .federal-state {
         padding-top: 10px;
+        height: 35px;
+        margin-left: 8px !important;
     }
 
     .section-default {
