--- a/views/content/search.hbs
+++ b/views/content/search.hbs
@@ -37,7 +37,7 @@
 									</select>
 								</div>
 								<div class="col-sm-12 col-md-6">
-									<select name="filter[grade]"
+									<select name="filter[targetGroups.grade]"
 											data-placeholder="Klassenstufe"
 											class="select-subjects" multiple="multiple">
 										<option value="7">7.</option>
