Temporarily disable non-working grade filters

--- a/views/content/search.hbs
+++ b/views/content/search.hbs
@@ -36,7 +36,7 @@
 										{{/each}}
 									</select>
 								</div>
-								<div class="col-sm-12 col-md-6">
+								<!--div class="col-sm-12 col-md-6">
 									<select name="filter[targetGroups.grade]"
 											data-placeholder="Klassenstufe"
 											class="select-subjects" multiple="multiple">
@@ -44,7 +44,7 @@
 										<option value="8">8.</option>
 										<option value="9">9.</option>
 									</select>
-								</div>
+								</div-->
 							</div>
 						</div>
 					</div>
