--- a/views/homework/feedback.hbs
+++ b/views/homework/feedback.hbs
@@ -1,8 +1,9 @@
 <section id="feedback" class="tab-content section-homeworkdetails">
 	<h5>Bewertung</h5>
     <div class="homework">
+        Note: {{submission.grade}}
         <div class="comment">
-            <p>{{gradeComment}}</p>
+            <p>{{submission.gradeComment}}</p>
         </div>
         <div class="material card">
             <ul>
