--- a/views/courses/overview.hbs
+++ b/views/courses/overview.hbs
@@ -5,7 +5,7 @@
                 <div class="row results">
                     <div class="card-columns">
                         {{#each courses}}
-                            <div class="card">
+                            <div class="card" style="border-left: 10px solid {{this.color}}">
                                 <div class="card-block">
                                     <h4 class="card-title">
                                         <a href="{{this.url}}">
