--- a/views/homework/feedback.hbs
+++ b/views/homework/feedback.hbs
@@ -1,7 +1,12 @@
 <section id="feedback" class="tab-content section-homeworkdetails">
 	<h5>Bewertung</h5>
     <div class="homework">
-        Note: {{submission.grade}}
+        {{#if gradeSystem}}
+            {{#ifvalue submission.grade value=0}}6{{/ifvalue}}
+            {{#ifvalue submission.grade value=1}}5-{{/ifvalue}}
+        {{else}}
+            Note: {{submission.grade}}
+        {{/if}}
         <div class="comment">
             <p>{{submission.gradeComment}}</p>
         </div>
