--- a/views/administration/forms/form-courses.hbs
+++ b/views/administration/forms/form-courses.hbs
@@ -6,6 +6,41 @@
 </div>
 
 <div class="form-group">
+    <label>Farbe des Kurses:</label>
+	<input name="color" list="coursecolors" type="color" placeholder="#ff0000" autocomplete=on required/>
+	<datalist id="coursecolors">
+	  <option value="#F44336">
+	  <option value="#E91E63">
+	  <option value="#9C27B0">
+	  <option value="#673AB7">
+	  <option value="#304FFE">
+	  <option value="#2196F3">
+	  <option value="#03A9F4">
+	  <option value="#00BCD4">
+	  <option value="#009688">
+	  <option value="#4CAF50">
+	  <option value="#8BC34A">
+	  <option value="#CDDC39">
+	  <option value="#FFEB3B">
+	  <option value="#FFC107">
+	  <option value="#FF9800">
+	  <option value="#FF5722">
+	  <option value="#795548">
+	  <option value="#9E9E9E">
+	  <option value="#607D8B">
+	  <option value="#000000">
+	</datalist>
+</div>
+
+<div class="form-group">
+     <label>
+		<input name="gradeSystem" type="checkbox" value="gradeSystem" />
+		Noten statt Punktesystem verwenden
+	</label>
+</div>
+
+
+<div class="form-group">
     <label>Klasse(n)</label>
 
     <select name="classIds[]" required multiple data-placeholder="Klasse(n) auswählen">
