--- a/views/content/forms/form-add-lesson.hbs
+++ b/views/content/forms/form-add-lesson.hbs
@@ -4,7 +4,7 @@
         <option value="" selected hidden>Wähle...</option>
     </select>
 </div>
-<div class="form-group" style="display: none">
+<div class="form-group lessons" style="display: none">
     <label for="name">Wählen Sie eine Unterrichtsstunde</label>
     <select class="lesson-selection form-control" name="lessonId" required="required">
     </select>
@@ -13,4 +13,5 @@
 <input type="hidden" name="title" value="{{title}}" />
 <input type="hidden" name="client" value="{{client}}" />
 <input type="hidden" name="url" value="{{url}}" />
+<input type="hidden" name="description" value="{{description}}" />
 <!-- todo: add none required fields -->
