--- a/views/administration/forms/form-courses.hbs
+++ b/views/administration/forms/form-courses.hbs
@@ -33,10 +33,13 @@
 </div>
 
 <div class="form-group">
-     <label>
-		<input name="gradeSystem" type="checkbox" value="gradeSystem" />
-		Noten statt Punktesystem verwenden
-	</label>
+	<label>Bewertungssystem:</label>
+	<fieldset>
+		<input type="radio" name="gradeSystem" value="0" id="gradeSystem0" onchange="this.value=0"/>
+		<label for="gradeSystem0">Punkte</label>
+		<input type="radio" name="gradeSystem" value="1" id="gradeSystem1" onchange="this.value=1"/>
+		<label for="gradeSystem1">Noten</label>
+	</fieldset>
 </div>
 
 
