--- a/views/homework/feedback.hbs
+++ b/views/homework/feedback.hbs
@@ -1,11 +1,25 @@
 <section id="feedback" class="tab-content section-homeworkdetails">
 	<h5>Bewertung</h5>
     <div class="homework">
-        {{#if gradeSystem}}
-            {{#ifvalue submission.grade value=0}}6{{/ifvalue}}
-            {{#ifvalue submission.grade value=1}}5-{{/ifvalue}}
+        {{#if courseId.gradeSystem}}
+            Note: {{#ifvalue submission.grade value=0 }} 6{{/ifvalue}}
+            {{#ifvalue submission.grade value=1 }}5-{{/ifvalue}}
+            {{#ifvalue submission.grade value=2 }} 5{{/ifvalue}}
+            {{#ifvalue submission.grade value=3 }}5+{{/ifvalue}}
+            {{#ifvalue submission.grade value=4 }}4-{{/ifvalue}}
+            {{#ifvalue submission.grade value=5 }} 4{{/ifvalue}}
+            {{#ifvalue submission.grade value=6 }}4+{{/ifvalue}}
+            {{#ifvalue submission.grade value=7 }}3-{{/ifvalue}}
+            {{#ifvalue submission.grade value=8 }} 3{{/ifvalue}}
+            {{#ifvalue submission.grade value=9 }}3+{{/ifvalue}}
+            {{#ifvalue submission.grade value=10}}2-{{/ifvalue}}
+            {{#ifvalue submission.grade value=11}} 2{{/ifvalue}}
+            {{#ifvalue submission.grade value=12}}2+{{/ifvalue}}
+            {{#ifvalue submission.grade value=13}}1-{{/ifvalue}}
+            {{#ifvalue submission.grade value=14}} 1{{/ifvalue}}
+            {{#ifvalue submission.grade value=15}}1+{{/ifvalue}}
         {{else}}
-            Note: {{submission.grade}}
+            {{submission.grade}} Punkte
         {{/if}}
         <div class="comment">
             <p>{{submission.gradeComment}}</p>
