list materials in lesson

--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -14,4 +14,9 @@
     .description {
         margin-bottom: 40px;
     }
+
+    .delete-material {
+        float: right;
+        cursor: pointer;
+    }
 }
