--- a/views/content/forms/form-add-lesson.hbs
+++ b/views/content/forms/form-add-lesson.hbs
@@ -15,3 +15,5 @@
 <input type="hidden" name="url" value="{{url}}" />
 <input type="hidden" name="description" value="{{description}}" />
 <!-- todo: add none required fields -->
+<!-- current query for later redirecting -->
+<input type="hidden" name="query" value="{{query}}">
