--- a/views/homework/extended.hbs
+++ b/views/homework/extended.hbs
@@ -2,8 +2,7 @@
 	<h5>Details</h5>
     <div class="homework">
         <div class="description">
-            <p>{{description}}</p>
-            Note: {{grade}}
+			<pre>{{description}}</pre>
         </div>
         <div class="material card">
             <ul>
