--- a/views/homework/submission.hbs
+++ b/views/homework/submission.hbs
@@ -22,7 +22,7 @@
 
 		{{else}}
 			{{#if comment}}
-				<p>{{comment}}</p>
+				<pre>{{comment}}</pre>
 			{{else}}
 				<p>Kein Kommentar.</p>
 			{{/if}}
