--- a/views/homework/evaluation.hbs
+++ b/views/homework/evaluation.hbs
@@ -1,13 +1,15 @@
 <section class="section-evaluation tab-view">
     <nav class="tab-links">
 		<a id="submission-tab-link" class="tab-link active">Abgabe</a>
-		<a id="comment-tab-link" 	class="tab-link">Bewertung</a>
+		{{#ifvalue teacherId value=currentUser._id}}
+			<a id="comment-tab-link" 	class="tab-link">Bewertung</a>
+		{{/ifvalue}}
 		<a id="student-comment-tab-link" class="tab-link">Kommentare</a>
 	</nav>
 	<div class="tabs">
 		<div id="submission" class="tab-content active">
 			<div class="comment">
-                <p>{{#if this.submission.comment}}{{this.submission.comment}}{{else}}Keine Abgabe.{{/if}}</p>
+                <pre>{{#if this.submission.comment}}{{this.submission.comment}}{{else}}Keine Abgabe.{{/if}}</pre>
 			</div>
 			<div class="material card">
 				<ul>
