--- a/views/homework/submissions.hbs
+++ b/views/homework/submissions.hbs
@@ -11,6 +11,7 @@
             <th/>
         </tr>
         </thead>
+		{{#if courseId.gradeSystem}}
 			{{#each students}}
 				<tbody class="usersubmission">
 				<tr class="userinfo">
