remove unnecessary code

--- a/views/homework/extended.hbs
+++ b/views/homework/extended.hbs
@@ -2,7 +2,7 @@
 	<h5>Details</h5>
     <div class="homework">
         <div class="description">
-<pre>{{truncate this.description}}</pre>
+<pre>{{this.description}}</pre>
         </div>
         <div class="material card">
             <ul>
