--- a/views/homework/submissions.hbs
+++ b/views/homework/submissions.hbs
@@ -25,24 +25,31 @@
 							<i class="fa fa-times red" aria-hidden="true"/>
 						{{/if}}
 					</td>
-					<td>{{#if submission.grade}}
-						{{#ifvalue submission.grade value=0 }}6{{/ifvalue}}
-						{{#ifvalue submission.grade value=1 }}5-{{/ifvalue}}
-						{{#ifvalue submission.grade value=2 }}5{{/ifvalue}}
-						{{#ifvalue submission.grade value=3 }}5+{{/ifvalue}}
-						{{#ifvalue submission.grade value=4 }}4-{{/ifvalue}}
-						{{#ifvalue submission.grade value=5 }}4{{/ifvalue}}
-						{{#ifvalue submission.grade value=6 }}4+{{/ifvalue}}
-						{{#ifvalue submission.grade value=7 }}3-{{/ifvalue}}
-						{{#ifvalue submission.grade value=8 }}3{{/ifvalue}}
-						{{#ifvalue submission.grade value=9 }}3+{{/ifvalue}}
-						{{#ifvalue submission.grade value=10}}2-{{/ifvalue}}
-						{{#ifvalue submission.grade value=11}}2{{/ifvalue}}
-						{{#ifvalue submission.grade value=12}}2+{{/ifvalue}}
-						{{#ifvalue submission.grade value=13}}1-{{/ifvalue}}
-						{{#ifvalue submission.grade value=14}}1{{/ifvalue}}
-						{{#ifvalue submission.grade value=15}}1+{{/ifvalue}}
-						{{/if}}</td>
+					<td>
+                        {{#if @root.courseId.gradeSystem}}
+                            {{#ifvalue submission.grade value=0 }} 6{{/ifvalue}}
+                            {{#if submission.grade}}
+                                    {{#ifvalue submission.grade value=1 }}5-{{/ifvalue}}
+                                    {{#ifvalue submission.grade value=2 }} 5{{/ifvalue}}
+                                    {{#ifvalue submission.grade value=3 }}5+{{/ifvalue}}
+                                    {{#ifvalue submission.grade value=4 }}4-{{/ifvalue}}
+                                    {{#ifvalue submission.grade value=5 }} 4{{/ifvalue}}
+                                    {{#ifvalue submission.grade value=6 }}4+{{/ifvalue}}
+                                    {{#ifvalue submission.grade value=7 }}3-{{/ifvalue}}
+                                    {{#ifvalue submission.grade value=8 }} 3{{/ifvalue}}
+                                    {{#ifvalue submission.grade value=9 }}3+{{/ifvalue}}
+                                    {{#ifvalue submission.grade value=10}}2-{{/ifvalue}}
+                                    {{#ifvalue submission.grade value=11}} 2{{/ifvalue}}
+                                    {{#ifvalue submission.grade value=12}}2+{{/ifvalue}}
+                                    {{#ifvalue submission.grade value=13}}1-{{/ifvalue}}
+                                    {{#ifvalue submission.grade value=14}} 1{{/ifvalue}}
+                                    {{#ifvalue submission.grade value=15}}1+{{/ifvalue}}
+                            {{/if}}
+                        {{else}}
+                            {{#ifvalue submission.grade value=0}}0 Punkte{{/ifvalue}}
+                            {{#if submission.grade}}{{submission.grade}} Punkte<{{/if}}
+                        {{/if}}
+                        </td>
 					<td><i class="fa fa-pencil-square-o" aria-hidden="true"/></td>
 				</tr>
 				<tr class="evaluation">
