added comment support

--- a/views/homework/evaluation.hbs
+++ b/views/homework/evaluation.hbs
@@ -97,25 +97,36 @@
 		</div>
 		
 		<div id="student-comment" class="tab-content">
+
 			<div class="commentarea form-group">
 				<ul class="comments">
-					<li class="comment">
-						<img class="picture" src="https://randomuser.me/api/portraits/men/3.jpg" alt=""/>
-						<a class="btn btn-secondary btn-sm"><i class="fa fa-trash" aria-hidden="true"></i></a>
-						<b class="name">David Dietrich</b>
-						<p>Spicy jalapeno shoulder strip steak tenderloin jerky cow. Ground round cupim tail pork shank cow, shankle ball tip leberkas. Pancetta turkey cupim burgdoggen doner pig. Kevin alcatra tail frankfurter ribeye hamburger. Tri-tip pancetta flank rump sausage tongue kielbasa cupim chuck porchetta strip steak cow shankle turkey. Spare ribs shankle corned beef rump. Pork ham hock turducken, leberkas drumstick pork loin andouille short ribs ham biltong swine ribeye alcatra tongue.</p>
-					</li>
-					<li class="comment">
-						<img class="picture" src="https://randomuser.me/api/portraits/women/11.jpg" alt=""/>
-						<b class="name">Lisa Hoppe</b>
-						<p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
-					</li>
+                    {{#each @root.comments}}
+                        {{#ifvalue this.submissionId value=../this.submission._id}}
+                            <li class="comment">
+                                <img class="picture" src="https://randomuser.me/api/portraits/men/3.jpg" alt=""/>
+                                <form action="/homework/comment/{{this._id}}" method="post" class="inline">
+                                    <input type="hidden" name="_method" value="delete"/>
+                                    <button type="submit" class="btn btn-secondary btn-sm">
+                                        <i class="fa fa-trash" aria-hidden="true"></i>
+                                    </button>
+                                </form>
+                                <b class="name">{{this.author.firstName}} {{this.author.lastName}}</b>
+                                <p>{{this.comment}}</p>
+                            </li>
+                        {{/ifvalue}}
+                    {{/each}}
 				</ul>
 				<div class="answer">
-					<textarea id="evaluation" type="text" class="form-control" placeholder="Enter comment here..." cols="5"></textarea>
-					<button type="submit" class="btn btn-primary">senden</button>
+                    <form class="form" method="post" action="/homework/comment">
+                        <input type="hidden" name="_method" data-force-value="true" value="post" />
+                        <input name="author" type="hidden" data-force-value="true" value="{{@root.currentUser._id}}" />
+                        <input name="submissionId" type="hidden" data-force-value="true" value="{{this.submission._id}}" />
+                        <textarea name="comment" type="text" class="form-control" placeholder="Enter comment here..." cols="5"></textarea>
+                        <button type="submit" class="btn btn-primary">senden</button>
+                    </form>
 				</div>
 			</div>
+
 		</div>
     </div>
 </section>
